--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ a:hover {
   text-decoration: underline;
 }
 
+li {
+  margin: 1rem 0;
+}
+
 .page-container {
   max-width: 480px;
   margin: 0 auto;
